# Tutorias-programaci-n-II-I-Ciclo-2024

./: CMakeLists.txt  Vector.cpp  Vector.h  main.cpp
DesingPatterns/Decorator/: CMakeLists.txt  Character.cpp  Character.h  Human.cpp  Human.h  RemoveSword.cpp  RemoveSword.h  SwordDecorator.cpp  SwordDecorator.h  main.cpp
EjercicioOperaciones/: CMakeLists.txt
IteradorV2/: CMakeLists.txt  Iterable.h  Iterador.h  Vector.cpp  Vector.h  VectorIterador.cpp  VectorIterador.h  main.cpp
ObjetoBase/: CMakeLists.txt  Contenedor.cpp  Contenedor.h  ObjetoBase.cpp  ObjetoBase.h  Persona.cpp  Persona.h  Vector.cpp  Vector.h  main.cpp
Prototype/: CMakeLists.txt  main.cpp
sobrecarga/: CMakeLists.txt  coleccionPersonas.cpp  coleccionPersonas.h  main.cpp  persona.cpp  persona.h  selector.cpp  selector.h  selectorLugar.cpp  selectorLugar.h
